--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </title>
   </head>
   <body>
-    Hello there, awesome person!
+    <h1>
+    Nithin's Web Page
+    </h1>
+    
+   Hello there, This page is made by Nithin. 
   </body>
 </html>
