Update with image
Added an image

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>
-    Nithin's Web Page
-    </h1>
-    
-   Hello there, This page is made by Nithin. 
+      Nithin's Web Page
+    </h1> 
+    Hello there, This page is made by Nithin. 
+    <img src='https://avatars3.githubusercontent.com/u/30104139?v=4> 
   </body>
 </html>
