--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       Nithin's Web Page
     </h1> 
     Hello there, This page is made by Nithin. 
-    <img src='https://avatars3.githubusercontent.com/u/30104139?v=4> 
+    <img src="https://avatars3.githubusercontent.com/u/30104139?v=4"> 
   </body>
 </html>
