Update added links to list
Added links to list

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     Hello there, This page is made by Nithin. 
     <img src="https://avatars3.githubusercontent.com/u/30104139?v=4"> 
     <ol>
-      <li>reddit.com</li>
-      <li>soundcloud.com</li>
-      <li>github.com</li>
+      <li><a href="https://reddit.com">Reddit link</a></li>
+      <li><a href="https://soundcloud.com"Soundcloud link</a></li>
+      <li><a href+"https://github.com">Github link</a></li>
     </ol>
   </body>
 </html>
