--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="https://avatars3.githubusercontent.com/u/30104139?v=4"> 
     <ol>
       <li><a href="https://reddit.com">Reddit link</a></li>
-      <li><a href="https://soundcloud.com"Soundcloud link</a></li>
+      <li><a href="https://soundcloud.com">Soundcloud link</a></li>
       <li><a href+"https://github.com">Github link</a></li>
     </ol>
   </body>
